fix tab spacing issue

--- a/client/src/styles/_tabs.scss
+++ b/client/src/styles/_tabs.scss
@@ -96,7 +96,7 @@
       margin-right: 15px;
 
       @include for-phone-only() {
-        margin-right: 12px;
+        margin-right: 11px;
       }
 
       &:hover {
